tests/cases/compiler-development/artifact/errors/diagnostic-struct-field-unknown.diagnostic
diagnostic error code=T0001 family=type message="struct 'Point' has no field 'y'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/structs/errors/struct-field-unknown.ari" display="tests/cases/structs/errors/struct-field-unknown.ari" bytes=89
  Label index=0 role=primary source_id=0 source="tests/cases/structs/errors/struct-field-unknown.ari" line=7 column=9 end_line=7 end_column=10 byte_start=85 byte_end=86 message=""
  Snippet label=0 text="  --> tests/cases/structs/errors/struct-field-unknown.ari:7:9\n   |\n 7 |   point.y\n   |         ^"
